Introduce API to get wallets by user
